// The MIT License
//
// Copyright (c) 2020 Temporal Technologies Inc.  All rights reserved.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package decision;

option go_package = "go.temporal.io/temporal-proto/decision";
option java_package = "io.temporal.proto.decision";
option java_multiple_files = true;
option ruby_package = "Temporal::Proto";

// Whenever this list of decision is changed do change the function shouldBufferEvent in mutableStateBuilder.go to make sure to do the correct event ordering.
enum DecisionType {
    ScheduleActivityTask = 0;
    RequestCancelActivityTask = 1;
    StartTimer = 2;
    CompleteWorkflowExecution = 3;
    FailWorkflowExecution = 4;
    CancelTimer = 5;
    CancelWorkflowExecution = 6;
    RequestCancelExternalWorkflowExecution = 7;
    RecordMarker = 8;
    ContinueAsNewWorkflowExecution = 9;
    StartChildWorkflowExecution = 10;
    SignalExternalWorkflowExecution = 11;
    UpsertWorkflowSearchAttributes = 12;
}
